test/files/neg/t12590B.scala
// scalac: -Werror -Wunused:locals
object Example extends App {
  def unusedLocal = {
    val a = 1
    2+1
  }
}